e2e-tests/tests/snapshots/martin_cp__postgres__composite_metadata.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: metadata
---
agg_tiles_hash = 1FB05D6F72DF491F0C9C58F666D0B0C0
bounds = -2,-1,142.8413150986,45
compression = gzip
description = public.function_zxy_query_test
format = pbf
generator = martin cp v0.0.0
hash_algorithm = md5
json = {
  "vector_layers": [
    {
      "fields": {
        "gid": "int4"
      },
      "id": "table_source"
    }
  ]
}
maxzoom = 0
minzoom = 0
name = composite
