e2e-tests/tests/snapshots/martin_cp__postgres__table_source_metadata.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: metadata
---
agg_tiles_hash = 1214534C8DD9505E276C3D538A68AC9D
bounds = -2,-1,142.8413150986,45
compression = gzip
foo = {"bar":"foo"}
format = pbf
generator = martin cp v0.0.0
hash_algorithm = md5
json = {
  "vector_layers": [
    {
      "fields": {
        "gid": "int4"
      },
      "id": "table_source"
    }
  ]
}
maxzoom = 6
minzoom = 0
name = table_source
