e2e-tests/tests/snapshots/martin_cp__postgres__table_source_summary.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: summary
---
{
  "avg_tile_size": 198.6141732283,
  "bbox": [
    -180.0,
    -85.0511287798,
    180.0,
    85.0511287798
  ],
  "file_path": "[TMP]",
  "file_size": 0,
  "max_tile_size": 758,
  "max_zoom": 6,
  "mbt_type": "Flat",
  "min_tile_size": 72,
  "min_zoom": 0,
  "page_count": 0,
  "page_size": 0,
  "tile_count": 127,
  "zoom_info": [
    {
      "avg_tile_size": 683.0,
      "bbox": [
        -180.0,
        -85.0511287798,
        180.0,
        85.0511287798
      ],
      "max_tile_size": 683,
      "min_tile_size": 683,
      "tile_count": 1,
      "zoom": 0
    },
    {
      "avg_tile_size": 467.0,
      "bbox": [
        -180.0,
        -85.0511287798,
        180.0,
        85.0511287798
      ],
      "max_tile_size": 758,
      "min_tile_size": 354,
      "tile_count": 4,
      "zoom": 1
    },
    {
      "avg_tile_size": 367.6,
      "bbox": [
        -90.0,
        -66.5132604431,
        180.0,
        66.5132604431
      ],
      "max_tile_size": 724,
      "min_tile_size": 130,
      "tile_count": 5,
      "zoom": 2
    },
    {
      "avg_tile_size": 249.875,
      "bbox": [
        -45.0,
        -40.9798980696,
        180.0,
        66.5132604431
      ],
      "max_tile_size": 758,
      "min_tile_size": 72,
      "tile_count": 8,
      "zoom": 3
    },
    {
      "avg_tile_size": 228.1538461538,
      "bbox": [
        -22.5,
        -21.9430455334,
        157.5000000000,
        55.7765730186
      ],
      "max_tile_size": 710,
      "min_tile_size": 72,
      "tile_count": 13,
      "zoom": 4
    },
    {
      "avg_tile_size": 195.2222222222,
      "bbox": [
        -11.25,
        -11.1784018737,
        146.25,
        48.9224992637
      ],
      "max_tile_size": 678,
      "min_tile_size": 72,
      "tile_count": 27,
      "zoom": 5
    },
    {
      "avg_tile_size": 153.6086956521,
      "bbox": [
        -5.625,
        -5.6159858191,
        146.25,
        45.0890355648
      ],
      "max_tile_size": 643,
      "min_tile_size": 72,
      "tile_count": 69,
      "zoom": 6
    }
  ]
}
